add ajax to buttons

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,4 +1,4 @@
 %h1 Rockr
 
-= link_to "New Venue", '#'
-= link_to "New Concert", '#'
+= link_to "New Venue", 'new_venue_path', :id => "new_venue_link", :remote => true
+= link_to "New Concert", 'new_concert_path', :id => "new_concert_link", :remote => true
